--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/MTProjectDatabase
-spring.datasource.username=ironhacker
-spring.datasource.password=1r0nh4ck3r
+spring.datasource.username=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+server.error.include-message=always
