--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,19 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-#spring.datasource.initialization-mode=always
+#spring.jpa.show-sql=true
+
+
+spring.jpa.database=mysql
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
+
 server.error.include-message=always
+
+
+spring.datasource.initialization-mode=always
+spring.sql.init.mode=always
+spring.sql.init.continue-on-error=true
+spring.jpa.defer-datasource-initialization=true
+spring.datasource.platform=mysql
