--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,16 +6,16 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 
 
-spring.jpa.database=mysql
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.database=mysql
+#spring.jpa.show-sql=false
+#spring.jpa.properties.hibernate.format_sql=true
 
 
 server.error.include-message=always
 
 
-spring.datasource.initialization-mode=always
-spring.sql.init.mode=always
-spring.sql.init.continue-on-error=true
-spring.jpa.defer-datasource-initialization=true
-spring.datasource.platform=mysql
+#spring.datasource.initialization-mode=always
+#spring.sql.init.mode=always
+#spring.sql.init.continue-on-error=true
+#spring.jpa.defer-datasource-initialization=true
+#spring.datasource.platform=mysql
