--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 
 
+
 #spring.jpa.database=mysql
 #spring.jpa.show-sql=false
 #spring.jpa.properties.hibernate.format_sql=true
@@ -13,6 +14,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.error.include-message=always
 
+spring.security.user.name=natalia
+spring.security.user.password=natalia
 
 #spring.datasource.initialization-mode=always
 #spring.sql.init.mode=always
